--- a/1-dom-practice/index.html
+++ b/1-dom-practice/index.html
@@ -10,7 +10,6 @@
 			This is a paragraph. Click the button to change its content.
 		</p>
 		<button id="changeContentButton">Change Content</button>
-
-		<script src="script.js"></script>
+		<script src="script.js" defer></script>		
 	</body>
 </html>
