append child item to body

--- a/1-dom-practice/index.html
+++ b/1-dom-practice/index.html
@@ -10,6 +10,8 @@
 			This is a paragraph. Click the button to change its content.
 		</p>
 		<button id="changeContentButton">Change Content</button>
+
+		<button id="appendButton">Append Element</button>
 		<script src="script.js" defer></script>		
 	</body>
 </html>
