Update Rock Paper Scissors game script

--- a/1-dom-practice/index.html
+++ b/1-dom-practice/index.html
@@ -12,6 +12,8 @@
 		<button id="changeContentButton">Change Content</button>
 
 		<button id="appendButton">Append Element</button>
+		<button id = "deleteFirstHeading">Delete first Heading</button>
+		<button id = "deleteAllHeadings">Delete All Headings</button>
 		<script src="script.js" defer></script>		
 	</body>
 </html>
