--- a/3-password/index.html
+++ b/3-password/index.html
@@ -11,7 +11,7 @@
             <label>Your password here:</label>
             <input type="password" id="passwordInput"></input>
             <progress id="progressBar" value="0" max="100"> weak </progress><br>
-            <label>Weak Password</label>
+            <label id="progressDescription">Should be longer</label>
         </form>
 
 		<script src="index.js" defer></script>		
