implement memory game - unfinished

--- a/4. MemoryGame/index.html
+++ b/4. MemoryGame/index.html
@@ -4,44 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome To MemCheck</title>
-    <script src="index.js"> </script>
+    <script src="index.js" defer> </script>
     <link rel="stylesheet" type="text/css" href ="./gamestyle.css">
 </head>
 <body>
     <H1 style="text-align: center; color:blue">Are you ready to Check your Memory Power....</H1>
 <div class="grid-container">
     <div class="item1">
-        <img src="./images/apple.png" alt="Apple"/>
+        <img src="./images/fruit-basket.png" width="150px" alt="Apple" id="apple1" />
     </div>
     <div class="item2">
-        <img src="./images/grapes.png" alt="grapes"/>
+        <img src="./images/grapes.png" alt="grapes" id="grapes1" style = "display:none"/>
     </div>
     <div class="item3">
         
-        <img src="./images/orange.png" alt="orange"/>
+        <img src="./images/orange.png" alt="orange" id="orange1" style = "display:none"/>
     </div>  
     <div class="item4">        
-        <img src="./images/pear.png" alt="pear"/>
+        <img src="./images/pear.png" alt="pear" id="pear1" style = "display:none"/>
     </div>
     <div class="item5">
-        <img src="./images/pineapple.png" alt="pineapple"/></div>
+        <img src="./images/pineapple.png" alt="pineapple" id="pineapple1" style = "display:none"/></div>
     <div class="item6">
-        <img src="./images/strawberry.png" alt="strawberry"/>
+        <img src="./images/strawberry.png" alt="strawberry" id="strawberry1" style = "display:none"/>
     </div>
-    <div class="item7"><img src="./images/apple1.png" alt="Apple1"/>
+    <div class="item7"><img src="./images/apple1.png" alt="Apple1" id="apple2" style = "display:none"/>
     </div>
     <div class="item8">
-        <img src="./images/grapes.png" alt="grapes"/>
+        <img src="./images/grapes.png" alt="grapes" id="grapes2" style = "display:none"/>
     </div>  
     <div class="item9"> 
-        <img src="./images/orange.png" alt="orange"/>
+        <img src="./images/orange.png" alt="orange" id="orange2" style = "display:none"/>
     </div>
     <div class="item10">
-        <img src="./images/pear.png" alt="pear"/></div>
-    <div class="item11"> <img src="./images/pineapple.png" alt="pineapple"/>
+        <img src="./images/pear.png" alt="pear" id="pear2" style = "display:none"/></div>
+    <div class="item11"> <img src="./images/pineapple.png" alt="pineapple" id="pineapple2" style = "display:none"/>
     </div>
     <div class="item12">        
-        <img src="./images/strawberry.png" alt="strawberry"/>
+        <img src="./images/strawberry.png" alt="strawberry" id="strawberry2" style = "display:none"/>
      </div> 
   </div>
 </body>
